use List.of() instead of Arrays